    (/dev/tty).

  * Log objects are now active by default (except for the Log object
    constructed by its default constructor)

  * The default Log constructor no longer has a default argument, as providing
    an explicit argument may be confused with the constructor expecting a
    std::string as its first argument.

  * Added the description of the enum SizeUnit to the man-pages of all classes
    using FBB::SharedEnum::SizeUnit.

  * SharedStreambuf: extractions (also insertions ?) sometimes failed to
    operate correctly. Fixed by adding setg() and setp() calls to constructors
    and underflow. Also added sharedstreambuf/driver.

  * Added SharedReadme (7bobcat) and associated figures describing how the
    Shared Memory classes were implemented.

  * Fixed incomplete deletion of shared memory segments by
    SharedMemory::kill() and SharedMemory::clear()


bobcat (3.22.01)

  * Hurd-i386 architectures do not (completely?) implement the POSIX standard,
    requiring the definition of some specific macro definitions. These macros
    are now added where required: to stat/path.cc and signal/verify.cc

  * Iterator's implementation now follows the design described in the C++
    Annotations

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 03 Mar 2014 21:28:03 +0100

bobcat (3.22.00)

  * Added new class CSV, handling comma separated values

  * Learned something new: in order to define a const reverse iterator, define
    Type const &reference in the iterator class, and define Type const
    &operator*() const. The use of shared_ptr (see git commit
    1215566b78...) is not required.

  * Applied several cosmetic changes

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 28 Feb 2014 19:44:52 +0100

bobcat (3.21.01)

  * Oops, 3.21.00 lacked the 'iterator' header file that provides Iterator and
    ReverseIterator.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 15 Feb 2014 15:25:58 +0100

bobcat (3.21.00)
