@@ -16,10 +16,10 @@ manpagedescription()
 of the Template Algorithm Design Pattern. The class was designed as a virtual
 base class for classes implementing the essential parts of the forking
 process. The class is a virtual base class. Derived classes em(must) implement
-the members bf(childProcess()) and bf(parentProcess()) as part of the
+the members tt(childProcess) and tt(parentProcess) as part of the
 `Template Method Design Pattern' (see Gamma em(et al.), 1995).
 
-Terminating child processes send bf(SIGCHLD) signals to their parents. The
+Terminating child processes send tt(SIGCHLD) signals to their parents. The
 bf(C) library offers the following em(macros) to analyze the em(status) values
 received by the parent process using a bf(wait)(2) or bf(waitpid)(2) system
 call: 
@@ -62,7 +62,7 @@ manpagesection(DESTRUCTOR)
     itemization(
     itb(virtual ~Fork())
         Derived classes may define their own destructor, which is called when
-the bf(~Fork()) destructor is activated.
+the tt(Fork) destructor is activated.
     )
 
 manpagesection(MEMBER FUNCTIONS)
@@ -70,7 +70,7 @@ manpagesection(MEMBER FUNCTIONS)
     itb(void fork())
         Performs the actual forking. It is implemented in such a way that the
 corresponding parent- and child- processes are activated from virtual members
-of bf(FBB::Fork). If the forking operation fails, an bf(FBB::Exception) exception
+of bf(Fork). If the forking operation fails, an tt(FBB::Exception) exception
 is thrown.
     )
 
@@ -79,7 +79,7 @@ manpagesection(PROTECTED MEMBER FUNCTIONS)
     itb(virtual void childProcess() = 0)
         This member em(must) be implemented by derived classes. It defines the
 actions that are performed by the child process, following the bf(fork)(2)
-system call. Just before bf(childProcess()) is called, bf(childRedirections())
+system call. Just before tt(childProcess) is called, tt(childRedirections)
 (see below) has been executed. The tt(childProcess()) function should
 terminate the child process. A good way to do this is to throw an exeption
 which is caught by tt(main())'s function try block. Terminating a process 
@@ -88,27 +88,27 @@ using bf(exit)(2) is deprecated in bf(C++).
         This function em(may) be redefined in derived classes to set up the
 redirections that are necessary to communicate with the parent process. See
 also the classes bf(redirector)(3bobcat), bf(pipe)(3bobcat),
-bf(ipipe)(3bobcat) and bf(opipe)(3bobcat). By default, bf(childRedirections())
+bf(ipipe)(3bobcat) and bf(opipe)(3bobcat). By default, tt(childRedirections)
 does nothing.
     itb(virtual void parentProcess() = 0)
         This member em(must) be implemented by derived classes. It defines the
 actions that are performed by the parent process, following the bf(fork)(2)
-system call. Just before bf(parentProcess()) is called,
-bf(parentRedirections()) (see below) has been executed.
+system call. Just before tt(parentProcess) is called,
+tt(parentRedirections) (see below) has been executed.
     itb(virtual void parentRedirections())
         This function em(may) be redefined in derived classes to set up the
 redirections that are necessary to communicate with, e.g., the parent. See,
 e.g., the classes bf(redirector)(3bobcat), bf(pipe)(3bobcat),
 bf(ipipe)(3bobcat) and bf(opipe)(3bobcat). By default,
-bf(parentRedirections()) does nothing.
+tt(parentRedirections) does nothing.
     itb(pid_t pid() const)
         Returns the child's process id in the parent's code (i.e., in the
 bf(parent-)members below), and 0 in the child's code (i.e., in the
-bf(child-)members below). Note that the value of bf(pid()) is bf(undefined)
-when called em(before) the member bf(fork()) has been called.
+bf(child-)members below). Note that the value of tt(pid) is bf(undefined)
+when called em(before) the member tt(fork) has been called.
     itb(void prepareDaemon() const)
         Prepares for a daemon childprocess. This function may (should) be
-called from bf(childProcess()) to ensure that the child process changes its
+called from tt(childProcess) to ensure that the child process changes its
 current working directory to the root (/) directory, thus freeing up mount
 points; that the child process starts a new session/process group to allow the
 parent (group leader) to kill all its processes without terminating the
@@ -117,12 +117,22 @@ streams by associating them with tt(/dev/null) to prevent ghost input and
 output actions from interfering with the daemon's actions. An
 tt(FBB::Exception) is thrown if changing directory to the root directory
 fails.
+    itb(void prepareDaemon(std::string const &out, std::string const &err,
+        mode_t mode = 0600) const)
+        Prepares for a daemon childprocess like the previous member function,
+but allows redirection of the standard output (tt(out)) and standard error
+(tt(err)) streams to files. Specify empty strings to redirect these streams to
+tt(/dev/null). With non-empty strings the specified files are opened in
+append-mode (and created if not yet existing), by default using mode 0600
+(read/write mode for the user only). An tt(FBB::Exception) is thrown if
+changing directory to the root directory or if using the specified file(s)
+fails.
     itb(int waitForChild()) 
-        This member may be called by bf(parentProcess()) to wait for the
+        This member may be called by tt(parentProcess) to wait for the
 completion of the child-process. The return value (exit-code) of the child
 process is returned as a value between 0 and 255. If the child process
 terminates before the completion of the parent process, then
-bf(waitForChild()) should be called to prevent em(zombies) from
+tt(waitForChild) should be called to prevent em(zombies) from
 occurring. Alternatively, the parent process may terminate (e.g., using
 bf(exit)(2)) while the child process is still alive. This is the normal way to
 create a em(daemon) process.
