@@ -1,7 +1,5 @@
 includefile(include/header)
 
-COMMENT(replace 'tty' by the name of the new class)
-
 COMMENT(manpage, section, releasedate, archive, short name)
 manpage(FBB::Tty)(3bobcat)(_CurYrs_)(libbobcat-dev__CurVers_-x.tar.gz)
                     (Controls echoing of characters)
