@@ -1,16 +1,17 @@
 #include "fork"
 
+#include <fcntl.h>
+#include <unistd.h>
+
 #include <sys/stat.h>
-#include <sys/types.h>
 #include <sys/wait.h>
+
+#include <cstdlib>
+#include <string>
 
 #include <bobcat/exception>
 
-
-#include <fcntl.h>
-#include <unistd.h>
-#include <cstdlib>
-
+using namespace std;
 using namespace FBB;
 
 
