@@ -13,6 +13,11 @@ bobcat (3.??.??)
     an explicit argument may be confused with the constructor expecting a
     std::string as its first argument.
 
+  * Added member 
+        prepareDaemon(string const &out, string const &err, mode_t mode) const 
+    to the class Fork, allowing automatic redirection of stdandard output and
+    standard error messages to files.
+
   * Added the description of the enum SizeUnit to the man-pages of all classes
     using FBB::SharedEnum::SizeUnit.
 
